refact: 메인 홈 코드 리팩토링
- 중복 코드 제거
- 함수명 변경

--- a/base/templates/intro.html
+++ b/base/templates/intro.html
@@ -30,7 +30,7 @@
       <form class="boxint">
         <h5>제 38대 동아리 연합회 벼리X멋쟁이 사자처럼 at SYU</h5>
         <h1>2021-2 동아리 홍보전</h1>
-        <div><a href="{% url 'home1' %}" class="subb">입장하기</a></div>
+        <div><a href="{% url 'main_home' %}" class="subb">입장하기</a></div>
       </form>
 
       <img src="{% static 'syu_logo.png' %}" class="loggg" />
