--- a/club/templates/club_list2.html
+++ b/club/templates/club_list2.html
@@ -123,7 +123,7 @@
       <i class="fas fa-search"></i>
     </div><br><br> -->
 
-    <form action="{% url 'haksool' club_type %}" method="GET">
+    <form action="{% url 'main_type' club_type %}" method="GET">
       <div class="search-bar">
         <input type="search" placeholder="동아리 이름을 입력하세요" name="keyword">
         <button type="submit" class="fas fa-search"></button>
@@ -139,7 +139,7 @@
     {% for club in club_list %}
     <!-- card -->
 
-    <a href="{% url 'home' club.club_id %}" class="card_a">
+    <a href="{% url 'home' club.id %}" class="card_a">
       <div class="card" style="border-radius: 10px; border: none">
         {% if club.main_club == 1 %}
           <img
