--- a/base/templates/side.html
+++ b/base/templates/side.html
@@ -20,7 +20,7 @@
     <div class="sidebar">
       <div class="sidebar_header">
         <div class="hide_Btn"><i class="fas fa-angle-double-left" id="CloseBtn"></i></div>
-        <a href="{% url 'home1' %}"><h1>동아리 홍보전</h1></a>
+        <a href="{% url 'main_home' %}"><h1>동아리 홍보전</h1></a>
         <div class="user">
           <div>
             <img class="admin_login" src="{% static 'admin_login.png' %}">
@@ -108,7 +108,7 @@
 
   <section class="section_side">
     <div class="menu_Btn"><i class="fas fa-bars" id="OpenBtn" style="font-size: 35px;"></i></div>
-    <h1><a href="{% url 'home1' %}" style="text-decoration: none; color: white;">동아리 홍보전</a></h1>
+    <h1><a href="{% url 'main_home' %}" style="text-decoration: none; color: white;">동아리 홍보전</a></h1>
     <div class="dday">
       <img class="dday_calendar" src="{% static 'dday_calendar.png' %}">
       <div class="counter"></div>
