--- a/club/templates/club_list4.html
+++ b/club/templates/club_list4.html
@@ -1,36 +1,52 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>기타분과</title>
 
     <!-- <link rel="stylesheet" href="club_list.css"> -->
-    <script src="https://kit.fontawesome.com/d1c6c79e37.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
+    <script
+      src="https://kit.fontawesome.com/d1c6c79e37.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
-  
+
     <style>
       @font-face {
-        font-family: 'Cafe24Danjunghae';
-        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Cafe24Danjunghae.woff') format('woff');
+        font-family: "Cafe24Danjunghae";
+        src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Cafe24Danjunghae.woff")
+          format("woff");
         font-weight: normal;
         font-style: normal;
       }
-  
-      body{
-        background: #EAE5E3 !important;
+
+      body {
+        background: #eae5e3 !important;
       }
-  
+
       header {
         position: sticky;
         /* padding: 20px 5% 4% 4%; */
@@ -42,20 +58,19 @@
         right: 0;
         z-index: 1;
       }
-  
-      a{
+
+      a {
         text-decoration: none !important;
       }
-  
-      header>p {
+
+      header > p {
         padding-top: 4%;
-        font-family: 'Cafe24Danjunghae';
+        font-family: "Cafe24Danjunghae";
         letter-spacing: 1px;
         font-size: 45px;
         text-align: center;
       }
-  
-  
+
       /* search */
       .search-bar {
         position: relative;
@@ -63,8 +78,8 @@
         margin: 10px 0 0 2%;
         padding: 20px 4%;
       }
-  
-      .search-bar>input {
+
+      .search-bar > input {
         width: 100%;
         height: 40px;
         border: 0px;
@@ -74,7 +89,7 @@
         color: black;
         padding-right: 40px;
       }
-  
+
       .fa-search {
         background-color: transparent;
         border: none;
@@ -82,30 +97,27 @@
         right: 8px;
         top: 36%;
         font-size: 20px;
-        color: #502DC6;
+        color: #502dc6;
         margin-right: 4%;
       }
-  
-  
-      body>section {
+
+      body > section {
         width: 90%;
         margin: auto;
         margin-top: 10px;
         padding-bottom: 30px;
       }
-  
+
       .card {
         flex-direction: row !important;
       }
-  
     </style>
+  </head>
 
-</head>
-
-<body>
+  <body>
     <header>
-        {% include 'side.html' %}
-        <!-- <nav>
+      {% include 'side.html' %}
+      <!-- <nav>
             디데이
             <img class="dday_img" src="../static/분과페이지 디데이 달력.png" width="35px">
             <img class="dday_img" src="{% static 'base/분과페이지 디데이 달력.png' %}" width="35px">
@@ -117,50 +129,52 @@
             <span>동아리 홍보전</span><br>
         </nav> -->
 
-        <p> 기타 </p>
-        <!-- <div class="search-bar">
+      <p>기타</p>
+      <!-- <div class="search-bar">
             <input type="text" placeholder="동아리 이름을 입력하세요">
             <i class="fas fa-search"></i>
         </div><br><br> -->
 
-        <form action="{% url 'haksool' club_type %}" method="GET">
-            <div class="search-bar">
-                <input type="search" placeholder="동아리 이름을 입력하세요" name="keyword">
-                <button type="submit" class="fas fa-search"></button>
-                <!-- <i class="fas fa-search"></i> -->
-            </div>
-        </form>
-
+      <form action="{% url 'main_type' club_type %}" method="GET">
+        <div class="search-bar">
+          <input
+            type="search"
+            placeholder="동아리 이름을 입력하세요"
+            name="keyword"
+          />
+          <button type="submit" class="fas fa-search"></button>
+          <!-- <i class="fas fa-search"></i> -->
+        </div>
+      </form>
     </header>
 
     <section>
+      <!-- card -->
 
-        <!-- card -->
-
-    <a href="{% url 'home' club.club_id %}" class="card_a">
+      <a href="{% url 'home' club.id %}" class="card_a">
         <div class="card" style="border-radius: 10px; border: none">
           {% if club.main_club == 1 %}
-            <img
-              class="flag"
-              src="{% static '중앙.svg' %}"
-              width="40px"
-              height="45px"
-            />
-            {% elif club.main_club == 0 %}
-            <img
-              class="flag"
-              src="{% static '가등록.svg' %}"
-              width="40px"
-              height="45px"
-            />
-            {% else %}
-            <img
-              class="flag"
-              src="{% static '기타.svg' %}"
-              width="40px"
-              height="45px"
-            />
-            {% endif %}
+          <img
+            class="flag"
+            src="{% static '중앙.svg' %}"
+            width="40px"
+            height="45px"
+          />
+          {% elif club.main_club == 0 %}
+          <img
+            class="flag"
+            src="{% static '가등록.svg' %}"
+            width="40px"
+            height="45px"
+          />
+          {% else %}
+          <img
+            class="flag"
+            src="{% static '기타.svg' %}"
+            width="40px"
+            height="45px"
+          />
+          {% endif %}
           <div class="c_img">
             <div class="card_img">
               <!-- <img src="../static/1.png" width="80px" height="80px" style="border-radius: 50%"> -->
@@ -169,20 +183,20 @@
                 src="{{club.club_logo.url}}"
                 width="90px"
                 height="90px"
-                style="border-radius: 50%; border: 1px solid #cfcfcf;"
+                style="border-radius: 50%; border: 1px solid #cfcfcf"
               />
               {% else %}
               <img
                 src="{% static '1.png' %}"
                 width="90px"
                 height="90px"
-                style="border-radius: 50%; border: 1px solid #cfcfcf;"
+                style="border-radius: 50%; border: 1px solid #cfcfcf"
               />
               {% endif %}
             </div>
             <!-- <img class="flag" src="../static/중앙.svg" width="40px" height="45px"> -->
           </div>
-  
+
           <div class="text-wrap">
             <h1>{{club.club_name}}</h1>
             <span id="club_t">{{club.club_type}}</span>
@@ -190,10 +204,6 @@
           </div>
         </div>
       </a>
-
     </section>
-
-
-</body>
-
+  </body>
 </html>
